fix(admin): Implement HTML base href approach for admin dashboard routing
- Add base href in HTML instead of React Router basename prop
- Update Vite configuration to use consistent base path
- Add diagnostic logging for path detection
- Fix asset loading by using consistent paths
- Ensure proper route matching for admin dashboard

--- a/pine-time-admin/index.html
+++ b/pine-time-admin/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="Pine Time Admin Dashboard - Manage events, users, badges and more" />
+    <!-- Base path will be replaced during build for the correct environment -->
+    <base href="%BASE_URL%" />
+    <title>Pine Time Admin Dashboard</title>
+    <script>
+      // Ensure the page loads correctly at the root of the admin panel
+      if (window.location.pathname === '/admin' || window.location.pathname === '/admin/') {
+        console.log('Admin dashboard root path detected');
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
