--- a/pine-time-admin/index.html
+++ b/pine-time-admin/index.html
@@ -5,14 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Pine Time Admin Dashboard - Manage events, users, badges and more" />
-    <!-- Base path will be replaced during build for the correct environment -->
-    <base href="%BASE_URL%" />
+    <!-- No base tag needed with HashRouter approach -->
     <title>Pine Time Admin Dashboard</title>
     <script>
-      // Ensure the page loads correctly at the root of the admin panel
-      if (window.location.pathname === '/admin' || window.location.pathname === '/admin/') {
-        console.log('Admin dashboard root path detected');
-      }
+      // Log initial path information for debugging
+      window.addEventListener('DOMContentLoaded', function() {
+        console.log('Admin dashboard loaded, path:', window.location.pathname);
+        console.log('Hash:', window.location.hash);
+      });
     </script>
   </head>
   <body>
