fix(auth): Implement cross-domain token transfer for seamless navigation
- Add token-bridge.js to handle authentication token between domains
- Update admin dashboard to load token-bridge script early
- Modify main app navigation to pass token via URL parameter
- Implement proper error handling and validation per Pine Time standards
- Ensure graceful degradation when authentication services are unavailable

--- a/pine-time-admin/index.html
+++ b/pine-time-admin/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pine Time Admin Dashboard</title>
+    <!-- Token bridge script for cross-domain authentication - must load first -->
+    <script src="/token-bridge.js"></script>
     <script>
       // Diagnostic code for debugging 403 errors
       window.addEventListener('DOMContentLoaded', function() {
